# unarian

./: .gitignore  LICENSE.md  README.md  unarian.py
examples/: collatz.un  fast_growth.un  fibonacci.un  fractran_primes.un
python/: README.md  unarian.py
python/unarian/: base.py  cli.py  interface.py  interpreter.py  parser.py
python_min/: README.md  unarian.py
rust_min/: Cargo.toml  README.md
rust_min/src/: main.rs
unarian/: __init__.py  interface.py  interpreter.py  parser.py
vscode/: README.md  package.json  unarian-0.1.0.vsix  unarian-0.1.1.vsix  unarian-0.1.2.vsix
vscode/syntaxes/: unarian-language-configuration.json  unarian.json
