[package]
name = "unarian_min"
description = "Minimalistic Rust interpreter for the Unarian esoteric programming language."
authors = ["Curtis Bechtel"]
version = "0.1.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/crb233/unarian"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
